--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.10",
     "@astrojs/mdx": "^4.3.10",
     "@sanity/astro": "^3.2.10",
     "@sanity/client": "^7.12.1",
@@ -17,6 +18,7 @@
     "astro": "^5.15.4",
     "astro-portabletext": "^0.11.3",
     "canvas-confetti": "^1.9.3",
+    "create-cloudflare": "^2.54.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-is": "^19.2.0",
