--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/canvas-confetti": "^1.9.0",
     "astro": "^5.15.4",
+    "astro-font": "^1.1.0",
     "astro-portabletext": "^0.11.3",
     "canvas-confetti": "^1.9.3",
     "create-cloudflare": "^2.54.3",
