--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
     "@astrojs/mdx": "^4.3.10",
+    "@astrojs/react": "^4.4.2",
     "@sanity/astro": "^3.2.10",
     "@sanity/client": "^7.12.1",
     "@tailwindcss/vite": "^4.1.17",
@@ -23,6 +24,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-is": "^19.2.0",
+    "resend": "^6.4.2",
     "sanity": "^4.14.1",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.17"
